--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
 			<line x1="140" y1="150" x2="120" y2="180" class="figure-part"/>
 			<line x1="140" y1="150" x2="160" y2="180" class="figure-part"/>
 		</svg>
+		<div class="wrong-letters-container">
+			<div id="wrong-letters"></div>
+		</div>
+
+			<div class="word" id="word"></div>
 	</div>
+	<!-- Container for final message -->
+	<div class="popup-container" id="popup-container">
+		<div class="popup">
+			<h2 id="final-message"></h2>
+			<button id="play-button">Play again</button>
+		</div>
+	</div>
+	<!-- Notification -->
+	<div class="notification-container" id="notification-container">
+		<p>You have already entered this letter.</p>
+	</div>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
